#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT(p2p, 1.0, sunyue328@126.com)
AC_CONFIG_SRCDIR([src/client/Linux/Socket.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(p2p, 1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h netinet/in.h stdlib.h string.h sys/socket.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([bzero socket])

AC_CONFIG_FILES([Makefile
		 src/client/Makefile
                 src/client/Linux/Makefile])
AC_OUTPUT
